# bytewhiffer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rust-space-sniffer-overview.md  scanner.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
openspec/changes/add-bytewhiffer-mvp/: proposal.md  tasks.md
openspec/changes/add-insights-drawer/: tasks.md
openspec/changes/add-ntfs-turbo-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-scan-status-bar/: design.md  tasks.md
openspec/changes/add-treemap-abstraction-mode/: design.md  tasks.md
openspec/changes/archive/2026-07-11-add-bytewhiffer-mvp/: design.md
openspec/changes/archive/2026-07-12-add-scan-status-bar/: proposal.md
openspec/changes/archive/2026-07-12-directory-enclosure-theming/: tasks.md
openspec/changes/archive/2026-07-12-soft-elevation-theming/: tasks.md
openspec/changes/archive/2026-07-13-add-insights-drawer/: design.md  proposal.md
openspec/changes/archive/2026-07-17-add-treemap-abstraction-mode/: design.md  proposal.md
openspec/changes/directory-enclosure-theming/: design.md  proposal.md  tasks.md
openspec/changes/fix-hover-and-chrome-rendering/: design.md  tasks.md
openspec/changes/improve-treemap-legibility/: design.md  proposal.md  tasks.md
openspec/changes/overhaul-scan-progress-hud/: tasks.md
openspec/changes/soft-elevation-theming/: design.md  proposal.md  tasks.md
openspec/specs/block-labels/: spec.md
openspec/specs/disk-scanning/: spec.md
openspec/specs/file-actions/: spec.md
openspec/specs/hover-tooltip/: spec.md
openspec/specs/insights-drawer/: spec.md
openspec/specs/scan-responsiveness/: spec.md
openspec/specs/scan-status-bar/: spec.md
openspec/specs/theming/: spec.md
openspec/specs/treemap-abstraction/: spec.md
openspec/specs/treemap-layout/: spec.md
openspec/specs/treemap-navigation/: spec.md
openspec/specs/turbo-mode/: spec.md
scripts/: release.ps1  release.sh
src/: app.rs  insights.rs  main.rs  theme.rs  treemap.rs  util.rs
src/scanner/: mft.rs  mod.rs  walker.rs
(+30 files in other folders)
